--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,13 @@
-nanodet_3ds.3dsx
-nanodet_3ds.elf
-nanodet_3ds.lst
-nanodet_3ds.smdh
-.vscode/settings.json
-build/main.d
-build/main.o
-build/nanodet_3ds.lst
-build/nanodet_3ds.map
-build/vision.o
-build/vision.d
-build/nanodet.o
-build/nanodet.d
-test_img_resized.png
-test_img.png
 Nanodet-plus-3ds.3dsx
 Nanodet-plus-3ds.elf
+Nanodet-plus-3ds.lst
 Nanodet-plus-3ds.smdh
+build/main.d
+build/main.o
 build/Nanodet-plus-3ds.lst
 build/Nanodet-plus-3ds.map
+build/nanodet.d
+build/nanodet.o
+build/vision.d
+build/vision.o
+.vscode/settings.json
