--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,15 @@
-Nanodet-plus-3ds.3dsx
-Nanodet-plus-3ds.elf
-Nanodet-plus-3ds.lst
-Nanodet-plus-3ds.smdh
+Detkit-NCNN-3ds.3dsx
+Detkit-NCNN-3ds.elf
+Detkit-NCNN-3ds.smdh
+build/detector.d
+build/detector.o
+build/Detkit-NCNN-3ds.lst
+build/Detkit-NCNN-3ds.map
+build/fastestdet.d
+build/fastestdet.o
 build/main.d
 build/main.o
-build/Nanodet-plus-3ds.lst
-build/Nanodet-plus-3ds.map
 build/nanodet.d
 build/nanodet.o
 build/vision.d
 build/vision.o
-.vscode/settings.json
-build/detector.o
-build/detector.d
-src/main.cpp
-build/fastestdet.d
-build/fastestdet.o
