Reduced ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,4 @@
-Detkit-NCNN-3ds.3dsx
-Detkit-NCNN-3ds.elf
-Detkit-NCNN-3ds.smdh
-build/detector.d
-build/detector.o
-build/Detkit-NCNN-3ds.lst
-build/Detkit-NCNN-3ds.map
-build/fastestdet.d
-build/fastestdet.o
-build/main.d
-build/main.o
-build/nanodet.d
-build/nanodet.o
-build/vision.d
-build/vision.o
+*.3dsx
+*.elf
+*.smdh
+build/*
